--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.1.3",
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "astro": "^2.5.5",
     "tailwindcss": "^3.3.2"
   },
